# ExtraFerm

./: .gitignore  126_qubit_batch_test.ipynb  126_qubit_test_scratch.ipynb  Cargo.toml  README.md  profiling.ipynb  pyproject.toml  ruff.py  test.ipynb  test_batch.ipynb  test_exact.ipynb  test_reuse.ipynb  test_single.ipynb  tox.ini
.github/workflows/: build-and-release.yml  check.yml
python/extended_matchgate_simulator/: __init__.py  estimation.py  exact.py  interface.py  raw_estimation.py  raw_estimation_lucj.py  raw_estimation_udv.py  utils.py  utils_dev.py
python/extraferm/: __init__.py  _lib.py  estimation.py  exact.py  interface.py  raw_estimation.py  utils.py  utils_dev.py
python/passive_extended_matchgate_simulator/: _lib.py  raw_estimation.py  utils.py
rust_backend/: Cargo.toml
rust_backend/src/: core.rs  estimation.rs  exact.rs  lib.rs  raw_estimation.rs
src/: core.rs  estimation.rs  exact.rs  lib.rs  raw_estimation.rs  raw_estimation_lucj.rs  raw_estimation_udv.rs
src/passive_extended_matchgate_simulator/: estimation.py  exact.py  interface.py  raw_estimation.py  utils.py
tests/: test_estimate.py  test_estimate_batch.py  test_estimate_single.py  test_exact_calculation.py  test_raw_estimate.py  test_raw_estimate_batch.py  test_raw_estimate_lucj_batch.py  test_raw_estimate_lucj_single.py  test_raw_estimate_reuse.py  test_raw_estimate_single.py  test_raw_estimate_udv_batch.py  test_raw_estimate_udv_single.py  test_seeded_reproducibility.py
tutorials/: Demo.ipynb  Demo_LUCJ.ipynb  Estimate Demo.ipynb  Exact Calculation Demo.ipynb  Raw Estimate Demo.ipynb  Trajectory Count.ipynb  readme_code.ipynb
