[package]
name = "extended-matchgate-simulator"
version = "0.1.0"
edition = "2021"
description = "Quantum circuit simulator for particle-number conserving extended matchgate circuits"
license = "MIT OR Apache-2.0"

[lib]
name = "extended_matchgate_simulator"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.25.1", features = ["extension-module"] }
numpy = "0.25.0"
ndarray = "0.16.1"
ndarray-linalg = "0.17.0"
num-complex = "0.4.6"
rand = "0.9.2"
rayon = "1.10.0"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"

[profile.dev]
opt-level = 0
debug = true
